deploy: 90767d44a1e04e534f8e3bb9755c8a0bb164befa

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" type="text/css" href="/assets/static/style-ea1e2dae.BcWtY8Ol.css">
         <link rel="stylesheet" type="text/css" href="/assets/static/style-2e73b638.B7VT8aW2.css">
         <link rel="stylesheet" type="text/css" href="/assets/static/components_theme-afcc1bfa.Dhpa2y22.css">
-        <link rel="stylesheet" type="text/css" href="/assets/static/uno-ff4db1d1.9krScg41.css">
-        <link rel="stylesheet" type="text/css" href="/assets/static/uno-ff4db1d1.c5tOBIoR.css">
+        <link rel="stylesheet" type="text/css" href="/assets/static/uno-ff4db1d1.grc01mEW.css">
+        <link rel="stylesheet" type="text/css" href="/assets/static/uno-ff4db1d1.B3j2oNiJ.css">
         <meta charset="UTF-8" />
         
     <title>Overview | react-classmate</title><meta property="og:title" content="Overview | react-classmate" />
@@ -99,11 +99,12 @@
 </span><span></span><span class="token" style="color:hsl(230, 8%, 24%)">&lt;</span><span class="token" style="color:hsl(5, 74%, 59%)">div</span><span class="token" style="color:hsl(5, 74%, 59%)"> </span><span class="token" style="color:hsl(35, 99%, 36%)">class</span><span class="token" style="color:hsl(230, 8%, 24%)">=</span><span class="token" style="color:hsl(230, 8%, 24%)">&quot;</span><span class="token" style="color:hsl(119, 34%, 47%)">px-3 text-dark mx-auto mb-3 text-sm</span><span class="token" style="color:hsl(230, 8%, 24%)">&quot;</span><span class="token" style="color:hsl(230, 8%, 24%)">&gt;</span><span class="token plain-text">Custom Section</span><span class="token" style="color:hsl(230, 8%, 24%)">&lt;/</span><span class="token" style="color:hsl(5, 74%, 59%)">div</span><span class="token" style="color:hsl(230, 8%, 24%)">&gt;</span></code></pre></div></div></div><div class="rounded border-1 p-3 border-warningLight bg-warningSuperLight md:p-3 mb-4 flex gap-2 items-baseline relative !my-10 md:w-3/4 mx-auto shadow-md"><div class="w-6 h-6 absolute left-2 top-6 -mt-3 flex items-center justify-center rounded-full bg-warningLight color-warningDark"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkles w-4 h-4"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"></path><path d="M20 3v4"></path><path d="M22 5h-4"></path><path d="M4 17v2"></path><path d="M5 18H3"></path></svg></div><div class="flex-1 pl-7"><p>Typescript Users: The examples above are simplified for demonstration purposes. For a more detailed explanation how to keep your types, please refer to the documentation.</p></div></div></div></div></div></div><footer class="bg-light text-dark -mt-16 h-16 z-17 relative"><div class="container mx-auto p-4"><p class="text-center mt-20"><a href="https://github.com/unterberg-dev/react-classmate" target="_blank" rel="noreferrer" class="link transition-colors duration-350 ease-out inline-block hover:text-primary text-primaryDark underline underline-0.5 !text-dark">2025, react-classmate</a></p></div></footer></div></div>
         
         <script id="vike_pageContext" type="application/json">{"_configFromHook":"!undefined","abortReason":"!undefined","_urlRewrite":null,"_urlRedirect":"!undefined","abortStatusCode":"!undefined","_abortCall":"!undefined","_pageContextInitIsPassedToClient":"!undefined","pageId":"/pages/index","routeParams":{},"data":"!undefined"}</script>
-        <script src="/assets/entries/entry-client-routing.KsMrY2Ua.js" type="module" async></script>
-        <link rel="modulepreload" href="/assets/entries/pages_index.CQ8pVbJw.js" as="script" type="text/javascript">
-        <link rel="modulepreload" href="/assets/chunks/chunk-BGQOIIQZ.js" as="script" type="text/javascript">
+        <script src="/assets/entries/entry-client-routing.CQWS2CHA.js" type="module" async></script>
+        <link rel="modulepreload" href="/assets/entries/pages_index.D4QMAnuj.js" as="script" type="text/javascript">
+        <link rel="modulepreload" href="/assets/chunks/chunk-CMvKMWtq.js" as="script" type="text/javascript">
         <link rel="modulepreload" href="/assets/chunks/chunk-CYDrz2XN.js" as="script" type="text/javascript">
-        <link rel="modulepreload" href="/assets/chunks/chunk-Djt3Bu3f.js" as="script" type="text/javascript">
-        <link rel="modulepreload" href="/assets/chunks/chunk-Da8e8OC6.js" as="script" type="text/javascript">
+        <link rel="modulepreload" href="/assets/chunks/chunk-BCN8JSgu.js" as="script" type="text/javascript">
+        <link rel="modulepreload" href="/assets/chunks/chunk-BUH9KIAS.js" as="script" type="text/javascript">
+        <link rel="modulepreload" href="/assets/chunks/chunk-DXC0PJvX.js" as="script" type="text/javascript">
       </body>
     </html>
