deploy: 6fdfd754a993e9516c15569f242aaa2b813c24a2

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
         <link rel="stylesheet" type="text/css" href="/assets/static/style-ea1e2dae.BcWtY8Ol.css">
         <link rel="stylesheet" type="text/css" href="/assets/static/style-2e73b638.B7VT8aW2.css">
         <link rel="stylesheet" type="text/css" href="/assets/static/components_theme-afcc1bfa.Dhpa2y22.css">
-        <link rel="stylesheet" type="text/css" href="/assets/static/uno-ff4db1d1.DTfTdkMO.css">
-        <link rel="stylesheet" type="text/css" href="/assets/static/uno-ff4db1d1.B67EfGDT.css">
+        <link rel="stylesheet" type="text/css" href="/assets/static/uno-ff4db1d1.SfNFd5ge.css">
         <meta charset="UTF-8" />
         
-    <title>React Classmate - Simplify Component Styling &amp; Class Management</title><meta property="og:title" content="React Classmate - Simplify Component Styling &amp; Class Management" />
+    <title>React Classmate - Simplify Class Management &amp; Styling</title><meta property="og:title" content="React Classmate - Simplify Class Management &amp; Styling" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="manifest" href="site.webmanifest"/><link rel="icon" href="favicon.ico"/><link rel="canonical" href="https://react-classmate.dev/"/><meta property="og:type" content="website"/><meta property="og:url" content="https://react-classmate.dev/"/><meta property="og:title"/><meta property="og:description"/><meta property="og:locale" content="en"/><script id="check-dark-mode" nonce="2t4f394ea52c937db4f319231a53fcc8">
             (function() {
@@ -99,12 +98,12 @@ const CustomSection = rc.extend(SectionBase)`
 &lt;div class=&quot;px-3 text-dark mx-auto mb-3 text-sm&quot;&gt;Custom Section&lt;/div&gt;</pre></code></div></div></div></div><div class="rounded border-1 p-3 border-warningLight bg-warningSuperLight md:p-3 mb-4 flex gap-2 items-baseline relative !my-10 md:w-3/4 mx-auto shadow-md"><div class="w-6 h-6 absolute left-2 top-6 -mt-3 flex items-center justify-center rounded-full bg-warningLight color-warningDark"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkles w-4 h-4"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"></path><path d="M20 3v4"></path><path d="M22 5h-4"></path><path d="M4 17v2"></path><path d="M5 18H3"></path></svg></div><div class="flex-1 pl-7"><p>Typescript Users: The examples above are simplified for demonstration purposes. For a more detailed explanation how to keep your types, please refer to the documentation.</p></div></div></div></div></div></div><footer class="bg-light text-dark -mt-16 h-16 z-17 relative"><div class="container mx-auto p-4"><p class="text-center mt-20"><a href="https://github.com/unterberg-dev/react-classmate" target="_blank" rel="noreferrer" class="link transition-colors duration-350 ease-out inline-block hover:text-primary text-primaryDark underline underline-0.5 !text-dark">2025, react-classmate</a></p></div></footer></div></div>
         
         <script id="vike_pageContext" type="application/json">{"_configFromHook":"!undefined","abortReason":"!undefined","_urlRewrite":null,"_urlRedirect":"!undefined","abortStatusCode":"!undefined","_abortCall":"!undefined","_pageContextInitIsPassedToClient":"!undefined","pageId":"/pages/index","routeParams":{},"data":"!undefined"}</script>
-        <script src="/assets/entries/entry-client-routing.BgVVoVxi.js" type="module" async></script>
-        <link rel="modulepreload" href="/assets/entries/pages_index.BZgdUsXU.js" as="script" type="text/javascript">
-        <link rel="modulepreload" href="/assets/chunks/chunk-BinLao3t.js" as="script" type="text/javascript">
+        <script src="/assets/entries/entry-client-routing.BmN5tlok.js" type="module" async></script>
+        <link rel="modulepreload" href="/assets/entries/pages_index.Bl57PpDE.js" as="script" type="text/javascript">
+        <link rel="modulepreload" href="/assets/chunks/chunk-WBS8TycS.js" as="script" type="text/javascript">
         <link rel="modulepreload" href="/assets/chunks/chunk-CYDrz2XN.js" as="script" type="text/javascript">
-        <link rel="modulepreload" href="/assets/chunks/chunk-iR-OAKT5.js" as="script" type="text/javascript">
+        <link rel="modulepreload" href="/assets/chunks/chunk-B_UY1AEE.js" as="script" type="text/javascript">
         <link rel="modulepreload" href="/assets/chunks/chunk-D7HrI6pR.js" as="script" type="text/javascript">
-        <link rel="modulepreload" href="/assets/chunks/chunk-YzGxQJ2_.js" as="script" type="text/javascript">
+        <link rel="modulepreload" href="/assets/chunks/chunk-CvByNBhA.js" as="script" type="text/javascript">
       </body>
     </html>
